Update VariableUnit.java
updated with some more tests
[MISC] Added more tests
[MOD] refactored `Variable` class
[MOD] added/modified some auxiliary methods in `VariableUnit` class